--- a/style.css
+++ b/style.css
@@ -299,6 +299,12 @@ img{
     display: inline-flex;
     align-items: center;
 }
+.button--small{
+    padding: 0.75rem 1rem;
+}
+.button--link{
+    
+}
 
 .about_img{
     width: 200px;
@@ -452,4 +458,35 @@ img{
 }
 .qualification_button.qualification_active{
     color: var(--first-color);
+}
+
+.services_container{
+    gap: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+.services_content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    transition: 0.3s;
+}
+.services_content:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+.services_icon{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+.services_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+.services_button{
+    cursor: pointer;
+    font-size: var(--small-font-size);
 }
