--- a/style.css
+++ b/style.css
@@ -303,7 +303,13 @@ img{
     padding: 0.75rem 1rem;
 }
 .button--link{
-    
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
+}
+.button--link:hover{
+    background-color: transparent;
+    color: var(--first-color-alt);
 }
 
 .about_img{
@@ -489,4 +495,55 @@ img{
 .services_button{
     cursor: pointer;
     font-size: var(--small-font-size);
+}
+.services_button:hover .button_icon{
+    transform: translateX(0.25rem);
+}
+.services_modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    z-index: var(--z-modal);
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+.services_modal-content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+}
+.services_modal-services{
+    row-gap: 1rem;
+}
+.services_modal-service{
+    display: flex;
+}
+.services_modal-title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
+}
+.services_modal-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: var(--first-color);
+    cursor: pointer;
+}
+.services_modal-icon{
+    color: var(--first-color);
+    margin-right: var(--mb-0-25);
+}
+.active-modal{
+    opacity: 1;
+    visibility: visible;
 }
