--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
     --header-height: 3rem;
 
     /* Colors */
-    --hue-color: 90;
+    --hue-color: 230; 
+    /* --hue-color: 90;  */
 
     --first-color: hsl(var(--hue-color), 50%, 25%);
     --first-color-second: hsl(var(--hue-color), 70%, 60%);
@@ -14,8 +15,10 @@
     --text-color: hsl(var(--hue-color), 8%, 45%);
     --text-color-light: hsl(var(--hue-color), 8%, 15%);
     --input-color: hsl(var(--hue-color), 70%, 95%);
-    --body-color: hsl(var(--hue-color), 60%, 100%);
+    --body-color: hsl(var(--hue-color), 60%, 98%);
     --container-color: #fff;
+    --scroll-bar-color: hsl(var(--hue-color), 15%, 90%);
+    --scroll-thumb-color: hsl(var(--hue-color), 15%, 80%);
     
     /* Font */
     --body-font: 'Poppins', sans-serif;
@@ -59,6 +62,33 @@
         --smaller-font-size: 0.8rem;
     }
 }
+body.dark-theme{
+
+    --first-color: hsl(var(--hue-color), 50%, 50%);
+    --first-color-alt: hsl(var(--hue-color), 90%, 60%);
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 100%, 100%);
+    --text-color: hsl(var(--hue-color), 65%, 85%);
+    --text-color-light: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 30%, 35%);
+    --body-color: hsl(var(--hue-color), 25%, 15%);
+    --container-color: hsl(var(--hue-color), 30%, 25%);
+    --scroll-bar-color: hsl(var(--hue-color), 15%, 35%);
+    --scroll-thumb-color: hsl(var(--hue-color), 15%, 50%);
+}
+.nav_btns{
+    display: flex;
+    align-items: center;
+}
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+.change-theme:hover{
+    color: var(--first-color-alt);
+}
 
 *{
     box-sizing: border-box;
@@ -81,7 +111,6 @@ body{
 h1, h2, h3, h4{
     color: var(--text-color);
     font-weight: var(--font-semi-bold);
-    
 }
 
 ul{
@@ -95,6 +124,12 @@ a{
 img{
     max-width: 100%;
     height: auto;
+}
+#mask0{
+    mask-type: alpha;
+}
+.active-link{
+    color: var(--first-color-alt);
 }
 
 .section{
@@ -133,6 +168,7 @@ img{
     left: 0;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
 .nav{
@@ -189,7 +225,7 @@ img{
 }
 
 .nav_link:hover{
-    color: var(--first-color);
+    color: var(--first-color-alt);
 }
 
 .nav_icon{
@@ -311,6 +347,9 @@ img{
     background-color: transparent;
     color: var(--first-color-alt);
 }
+.button_contact:hover .button_icon{
+    transform: translateX(0.25rem);
+}
 
 .about_img{
     width: 200px;
@@ -339,9 +378,12 @@ img{
     display: block;
     text-align: center;
 }
-.about_buttons{
+.about_button{
     display: flex;
     justify-content: center;
+}
+.about_button:hover .button_icon{
+    transform: translateY(0.25rem);
 }
 
 .skills_container{
@@ -466,11 +508,11 @@ img{
     color: var(--first-color);
 }
 
-.services_container{
+.knowledges_container{
     gap: 1.5rem;
     grid-template-columns: repeat(2, 1fr);
 }
-.services_content{
+.knowledges_content{
     position: relative;
     background-color: var(--container-color);
     padding: 3.5rem 0.5rem 1.25rem 1.5rem;
@@ -478,28 +520,28 @@ img{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
     transition: 0.3s;
 }
-.services_content:hover{
+.knowledges_content:hover{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
-.services_icon{
+.knowledges_icon{
     display: block;
     font-size: 1.5rem;
     color: var(--first-color);
     margin-bottom: var(--mb-1);
 }
-.services_title{
+.knowledges_title{
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-1);
     font-weight: var(--font-medium);
 }
-.services_button{
+.knowledges_button{
     cursor: pointer;
     font-size: var(--small-font-size);
 }
-.services_button:hover .button_icon{
+.knowledges_button:hover .button_icon{
     transform: translateX(0.25rem);
 }
-.services_modal{
+.knowledges_modal{
     position: fixed;
     top: 0;
     left: 0;
@@ -515,35 +557,408 @@ img{
     visibility: hidden;
     transition: 0.3s;
 }
-.services_modal-content{
+.knowledges_modal-content{
     position: relative;
     background-color: var(--container-color);
     padding: 1.5rem;
     border-radius: 0.5rem;
 }
-.services_modal-services{
+.knowledges_modal-knowledges{
     row-gap: 1rem;
 }
-.services_modal-service{
+.knowledges_modal-knowledge{
     display: flex;
 }
-.services_modal-title{
+.knowledges_modal-title{
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1-5);
 }
-.services_modal-close{
+.knowledges_modal-close{
     position: absolute;
     top: 1rem;
     right: 1rem;
     color: var(--first-color);
     cursor: pointer;
 }
-.services_modal-icon{
+.knowledges_modal-icon{
     color: var(--first-color);
     margin-right: var(--mb-0-25);
 }
 .active-modal{
     opacity: 1;
     visibility: visible;
+}
+
+.portfolio_container{
+    overflow: initial;
+}
+.portfolio_container{
+    padding: 0 3.5rem;
+}
+.portfolio_img{
+    width: 265px;
+    border-radius: 0.5rem;
+    justify-self: center;
+}
+.portfolio_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+.portfolio_data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.portfolio_description{
+    margin-bottom: var(--mb-0-75);
+}
+
+.portfolio_button:hover .button_icon{
+    transform: translateY(-0.25rem);
+}
+.swiper-button-prev::after, 
+.swiper-button-next::after{
+    visibility: hidden;
+    color: var(--first-color);
+    font-size: 2rem;
+}
+.swiper-portfolio-icon{
+    font-size: 2rem;
+    color: var(--first-color);
+}
+.swiper-button-prev{
+    left: -0.5rem;
+}
+.swiper-button-next{
+    right: -0.5rem;
+}
+.swiper-container-horizontal > .swiper-pagination-bullets{
+    bottom: -2.5rem;
+}
+.swiper-pagination-bullet-active{
+    background-color: var(--first-color);
+}
+
+.contact_container{
+    row-gap: 3rem;
+}
+.contact_information{
+    display: flex;
+    margin-bottom: var(--mb-2-5);
+}
+.contact_icon{
+    font-size: 2rem;
+    color: var(--first-color);
+    margin-right: var(--mb-0-75);
+}
+.contact_title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+}
+.contact_subtitle{
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+}
+.contact_content{
+    background-color: var(--input-color);
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem 0.25rem;
+}
+.contact_label{
+    font-size: var(--smaller-font-size);
+    color: var(--title-color);
+}
+.contact_input{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: 0.25rem 0.5rem 0.5rem 0;
+}
+.button_form{
+    border: none;
+}
+.button_form:hover .button_icon{
+    transform: translateX(0.25rem);
+}
+
+.footer{
+    padding-top: 2rem;
+}
+.footer_container{
+    row-gap: 3.5rem;
+}
+.footer_bg{
+    background-color: hsl(var(--hue-color), 50%, 25%);
+    padding: 2rem 0 3rem;
+}
+.footer_title{
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-0-25);
+}
+.footer_subtitle{
+    font-size: var(--small-font-size);
+}
+.footer_links{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+.footer_link:hover{
+    color: var(--first-color-lighter);
+}
+.footer_social{
+    font-size: 1.25rem;
+    margin-right: var(--mb-1-5);
+}
+.footer_social:hover{
+    color: var(--first-color-lighter);
+}
+.footer_copy{
+    font-size: var(--smaller-font-size);
+    text-align: center;
+    color: var(--first-color-lighter);
+    margin-top: var(--mb-3);
+}
+.footer_title, .footer_subtitle, .footer_link, .footer_social{
+    color: white;
+}
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: 0.8;
+    padding: 0 0.3rem;
+    border-radius: 0.4rem;
+    z-index: var(--z-tooltip);
+    transition: 0.4s;
+}
+.scrollup:hover{
+    background-color: var(--first-color-alt);
+    transform: translateY(-0.25rem);
+}
+.scrollup_icon{
+    font-size: 1.5rem;
+    color: white;
+}
+.show-scroll{
+    bottom: 5rem;
+}
+
+::-webkit-scrollbar{
+    width: 0.60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: 0.5rem;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 350px) {
+    .container{
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+    .nav_menu{
+        padding: 2rem 0.25rem 4rem;
+    }
+    .nav_list{
+        column-gap: 0;
+    }
+    .home_content{
+        grid-template-columns: 0.25fr 3fr;
+    }
+    .home_blob{
+        width: 180px;
+    }
+    .skills_title{
+        font-size: var(--normal-font-size);
+    }
+    .qualification_data{
+        gap: 0.5rem;
+    }
+    .knowledges_container{
+        grid-template-columns: max-content;
+        justify-content: center;
+    }
+    .knowledges_content{
+        padding-right: 3.5rem;
+    }
+    .knowledges_modal{
+        padding: 0 0.5rem;
+    }
+}
+@media screen and (min-width: 568px) {
+    .home_content{
+        grid-template-columns: max-content 1fr 1fr;
+    }
+    .home_data{
+        grid-column: initial;
+    }
+    .home_img{
+        order: 1;
+        justify-self: center;
+    }
+    .about_container, .portfolio_content, .footer_container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .qualification_sections, .skills_container, .contact_container{
+        display: grid;
+        grid-template-columns: 0.6fr;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    body{
+        margin: 0;
+    }
+    .section{
+        padding: 6rem 0 2rem;
+    }
+    .section_subtitle{
+        margin-bottom: 4rem;
+    }
+    .header{
+        top: 0;
+        bottom: initial;
+    }
+    .header, .main, .footer_container{
+        padding: 0 1rem;
+    }
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+    }
+    .nav_icon, .nav_close, .nav_toggle{
+        display: none;
+    }
+    .nav_list{
+        display: flex;
+        column-gap: 2rem;
+    }
+    .nav_menu{
+        margin-left: auto;
+    }
+    .change-theme{
+        margin: 0;
+    }
+    .home_container{
+        row-gap: 5rem;
+    }
+    .home_content{
+        padding-top: 5.5rem;
+        column-gap: 2rem;
+    }
+    .home_scroll{
+        display: block;
+    }
+    .home_scroll-button{
+        margin-left: 3rem;
+    }
+    .about_container{
+        column-gap: 5rem;
+    }
+    .about_img{
+        width: 350px;
+    }
+    .about_description{
+        text-align: initial;
+    }
+    .about_info{
+        justify-content: space-evenly;
+    }
+    .about_button{
+        justify-content: center;
+    }
+    .qualification_tabs{
+        justify-content: center;
+    }
+    .qualification_button{
+        margin: 0 var(--mb-1);
+    }
+    .qualification_sections{
+        grid-template-columns: 0.5fr;
+    }
+    .knowledges_container{
+        grid-template-columns: repeat(2, 218px);
+        justify-content: center;
+    }
+    .knowledges_icon{
+        font-size: 2rem;
+    }
+    .knowledges_content{
+        padding: 6rem 0 2rem 2.5rem;
+    }
+    .knowledges_modal-content{
+        width: 450px;
+    }
+    .portfolio_img{
+        width: 320px;
+    }
+    .portfolio_content{
+        align-items: center;
+    }
+    .footer_container{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .footer_bg{
+        padding: 3rem 0 3.5rem;
+    }
+    .footer_links{
+        flex-direction: row;
+        column-gap: 2rem;
+    }
+    .footer_socials{
+        justify-self: flex-end;
+    }
+    .footer_copy{
+        margin-top: 4.5rem;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .header, .main, .footer_container{
+        padding: 0;
+    }    
+    .home_blob{
+        width: 320px;
+    }
+    .home_social{
+        transform: translateX(-6rem);
+    }
+    .knowledges_container{
+        grid-template-columns: repeat(2, 238px);
+    }
+    .portfolio_content{
+        column-gap: 5rem;
+    }
+    .swiper-portfolio-icon{
+        font-size: 3.5rem;
+    }
+    .swiper-button-prev{
+        left: -3.5rem;
+    }
+    .swiper-button-next{
+        right: -3.5rem;
+    }
+    .contact_container{
+        display: flex;
+    }
+    .contact_form{
+        width: 460px;
+    }
+    .contact_input{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
