--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ img{
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
         border-radius: 1.5rem 1.5rem 0 0;
-        transition: 0.3s;
+        transition: 0.5s;
     }
 }
 
@@ -448,6 +448,10 @@ img{
 .skills_open .skills_arrow{
     transform: rotate(180deg);
 }
+.skills_list{
+    transition: 0.5s;
+}
+
 
 .qualification_tabs{
     display: flex;
